# ChangeLog for dev-python/pyclutter-gst
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyclutter-gst/ChangeLog,v 1.1 2010/02/26 22:56:31 nirbheek Exp $

*pyclutter-gst-1.0.0 (26 Feb 2010)

  26 Feb 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  +pyclutter-gst-1.0.0.ebuild, +metadata.xml:
  Add initial ebuild for pyclutter-gst, python bindings for clutter-gst
