@@ -1,4 +1,5 @@
 DIST pyclutter-gst-1.0.0.tar.bz2 233768 RMD160 96863df430fbfbe60e45454570bd7d7bb99d4772 SHA1 e1811107f3ccf2c1a4c8298f269b1bdf00af1429 SHA256 f7710b811f28d98e9d998d598e11ff707b6613b8e914a739fe6cb67ff04b14c5
+EBUILD pyclutter-gst-1.0.0-r1.ebuild 1020 RMD160 6de9d781b6697604e229aebd02c57e2d3fdb4e6b SHA1 7085d2bf38cf0fe66d664e1381eb5cd6376535fd SHA256 2d0ffd318c06239a9161b7563cc15dfa9ca06e59c88ea3dbc9602339d6dba883
 EBUILD pyclutter-gst-1.0.0.ebuild 905 RMD160 11ca4ac8fe66d7b8f037c79cc1faa14862910894 SHA1 b4a250990011d57a69b289493e040812d7fa1209 SHA256 ec527fff41a4772113837e738e048988d1e3e102a4f7239adc416cf2db9574b6
-MISC ChangeLog 432 RMD160 c6dc1a55ed08ca97dc2b695783801cbe37b70b1e SHA1 8b556e373a89e0d9e3ee065b7dbfc53b54ea3415 SHA256 b0c8a90c8cdc834afe5d1a25e364d8069484657ab995c08af01077ccff9c684b
+MISC ChangeLog 577 RMD160 917797b5d42b1f49f330d3dd451aeec14f569902 SHA1 7883421015469bf867afc3a1ec5518daec5c55a7 SHA256 42ffb0d17c2a9ec0c0bce40e793025b9ef703b3b671f753b1a5dd6ba848c77a3
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
